assets/styles/_intro.scss
// The intro blurb.
> section:first-of-type {
	margin-top:        calc(var(--header--scroll));
	min-height:        var(--section--height);
	scroll-margin-top: var(--anchor--offset--section);

	@include landscape {
		grid-row:   2; // After the header.
		margin-top: initial;
	}

	> p {
		@extend %font--calibre--light;

		--typography--leading: var(--typography--leading--tagline);
		--typography--size:    var(--typography--size--intro);

		-webkit-text-stroke-width: 0.0075em; // Ballpark weight of tagline.

		@include browser-specific(safari) {
			-webkit-text-stroke-width: initial; // Safari’s rendering has gaps.
			text-shadow:
				-0.005em  0 0.01em var(--color),
				 0 -0.005em 0.01em var(--color)
				;
			transition-property: background-color, color, text-shadow; // So it fades with the rest.
		}
	}
}



// The “nouns”.
> section:last-of-type {
	margin-bottom: var(--section--spacing);
	margin-top:    calc(var(--section--spacing) + 25vh); // Matches the IntersectionObserver offset.

	@include landscape {
		grid-row:      3; // After the intro.
		margin-bottom: calc(var(--section--spacing) + var(--section--overlap));
	}



	#art {
		margin-top: -25vh;
	}

	#art,
	#media,
	#science {
		min-height:        var(--section--height);
		scroll-margin-top: var(--anchor--offset--section);
	}

	#media,
	#science {
		margin-top: var(--section--spacing);
	}



	// Each noun.
	> section {
		@extend %font--markdown;
	}
}

